2008-07-26  Gautier Portet  <kassoulet gmail com>
	* po/pl/po: Updated Polish tranlation.
	  (thanks Piotr)

2008-07-03  Gautier Portet  <kassoulet gmail com>

	* src/soundconverter.py: Fix small crasher in batch mode.
	  (fix LP: #243831)

2008-06-23  Gautier Portet  <kassoulet gmail com>
	* src/soundconverter.py: Fix progress related problems in 1.3.0
	  Release 1.3.1

2008-06-23  Gautier Portet  <kassoulet gmail com>

	* src/soundconverter.py: Finally we can process multiple conversions
	  at the same time, yeah!
	  Add --jobs option to force the number of threads, default is number
	  of CPUs.
	  (fix #13735, LP: #226176)
	  Release 1.3.0

2008-06-10  Gautier Portet  <kassoulet gmail com>

	* src/soundconverter.py: Fixes various crashers reported by
	  Ubunteros.
	  (thanks Michael, Øyvind Stegard, Matthieu)
	  (fix LP: #222031  LP: #226685  LP: #230463)

2008-05-29  Gautier Portet <kassoulet gmail com>

	* po/de.po: Update de tranlation.

2008-05-13  Gautier Portet <kassoulet gmail com>

	* po/sr*: Update and fix Serbian translation.

2008-05-12  Gautier Portet <kassoulet gmail com>

	* po/pl.po: update Polish translation.

2008-05-11  Gautier Portet <kassoulet gmail com>

	* src/soundconverter.py:  TagReader will not decode whole file anymore, It
	will even not decode them at all !
	TagReader perform *much* faster (500s -> 20s on 260 files)
	(thanks thaytan on #gstreamer)
	Release 1.2.0

2008-05-05  Gautier Portet <kassoulet gmail com>

	* src/soundconverter.py: Got rid of the progress indicator not beeing 
	  reset after a conversion. 

2008-05-03  Gautier Portet <kassoulet gmail com>

	* po/: Updated Arabic Catalan Czech Spanish French Slovak translations.
	  Added Esperanto Persian translations.
	  Updated po/, updated configure.in.

2008-05-02  Gautier Portet <kassoulet gmail com>

	* src/soundconverter.py: Simplified drag_data_received() so it don't 
	  duplicate code in add_uris.
	  Display a message when trying to read cdda: uris.
	  Release 1.1.0
