@@ -1,3 +1,7 @@
+2008-07-29  Gautier Portet  <kassoulet gmail com>
+
+	* src/soundconverter.py: use giosrc when available. 
+
 2008-07-26  Gautier Portet  <kassoulet gmail com>
 	* po/pl/po: Updated Polish tranlation.
 	  (thanks Piotr)
